tests/ui/07-raw-in-if-block.stderr
error[E0425]: cannot find function, tuple struct or tuple variant `Raw` in this scope
 --> tests/ui/07-raw-in-if-block.rs:8:19
  |
8 |                 @{Raw("test")}
  |                   ^^^ not found in this scope
